--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,21 @@
+@font-face {
+  font-family: "Atkinson Hyperlegible";
+  src: url("./fonts/Atkinson-Hyperlegible-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Atkinson Hyperlegible";
+  src: url("./fonts/Atkinson-Hyperlegible-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
   margin: 0;
-  font-family: Consolas, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+  font-family: "Atkinson Hyperlegible", Consolas, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
